<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".NewNote">

    <com.example.notes.WaveView
        android:id="@+id/wave_background0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rotation="180"
        app:amplitudeRatio="0.05"
        app:behindWaveColor="?attr/wave_behind"
        app:frontWaveColor="?attr/wave_front"
        app:waveWaterLevel="0.05"
        app:waveShapef="square"/>

    <com.example.notes.WaveView
        android:id="@+id/wave_background1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:amplitudeRatio="0.05"
        app:behindWaveColor="?attr/wave_behind"
        app:frontWaveColor="?attr/wave_front"
        app:waveWaterLevel="0.7"
        app:waveShapef="square"/>

    <com.example.notes.WaveView
        android:id="@+id/wave_background2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:amplitudeRatio="0.05"
        app:waveShiftRatio="0.3"
        app:behindWaveColor="?attr/wave_behind"
        app:frontWaveColor="?attr/wave_front"
        app:waveWaterLevel="0.55"
        app:waveShapef="square"/>

    <com.example.notes.WaveView
        android:id="@+id/wave_background3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:amplitudeRatio="0.05"
        app:waveShiftRatio="0.6"
        app:behindWaveColor="?attr/wave_behind"
        app:frontWaveColor="?attr/wave_front"
        app:waveWaterLevel="0.3"
        app:waveShapef="square"/>

    <TextView
        android:id="@+id/text_new_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/name_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/new_note"
        android:textSize="32sp"/>

    <EditText
        android:id="@+id/name_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/text_new_note"
        app:layout_constraintBottom_toTopOf="@id/content_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:maxLines="4"
        android:textSize="32sp"
        android:background="@drawable/rounded_bg"
        android:hint="@string/name_this_note"/>

    <EditText
        android:id="@+id/content_note"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="6dp"
        app:layout_constraintTop_toBottomOf="@id/name_note"
        app:layout_constraintBottom_toTopOf="@id/button_notes"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/rounded_bg"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:textSize="24sp"
        android:hint="@string/context_this_note"/>

    <LinearLayout
        android:id="@+id/button_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintTop_toBottomOf="@id/content_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_note"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_bg"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:onClick="onClickBack"
            tools:ignore="onClick"/>

        <Space
            android:id="@+id/space_between4_note"
            android:layout_width="6dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/apply_note"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/rounded_bg"
            android:text="@string/apply"
            android:textSize="24sp"
            android:onClick="onClickApply"
            tools:ignore="onClick"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>