<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Notes">

    <com.example.notes.WaveView
        android:id="@+id/wave_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:amplitudeRatio="0.05"
        app:behindWaveColor="@color/wave_behind_notes"
        app:frontWaveColor="@color/wave_front_notes"
        app:waveWaterLevel="0.5"
        app:waveShapef="square"/>

    <LinearLayout
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/scroll_notes"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="24sp"
            android:onClick="onClickBack"
            android:layout_gravity="center"
            tools:ignore="onClick"/>

        <TextView
            android:id="@+id/label_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="48sp"
            android:text="@string/notes"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/scroll_notes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/titlebar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            android:orientation="vertical"/>

    </ScrollView>

    <Button
        android:id="@+id/button_add"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/plus"
        android:textSize="40sp"
        android:padding="0dp"
        android:layout_margin="60dp"
        android:gravity="center"
        android:onClick="onClickAddNote"
        tools:ignore="OnClick"/>

</androidx.constraintlayout.widget.ConstraintLayout>